# GWmodelS

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GWmodelDesktop.pro  README.md  aboutdevelopers.cpp  aboutdevelopers.ui  aboutdevelopteam.cpp  aboutdevelopteam.ui  app_win32.rc  gwmapp.cpp  gwmapp.h  gwmapp.ui  gwmattributetabledialog.cpp  gwmattributetabledialog.h  gwmattributetableview.cpp  gwmattributetableview.h  gwmcoordinate.cpp  gwmcoordinate.h  gwmcoordinate.ui  gwmcoordtranssettingdialog.cpp  gwmcoordtranssettingdialog.h  gwmcoordtransthread.cpp  gwmcoordtransthread.h  gwmcorrelationdialog.cpp  gwmcorrelationdialog.h  gwmcorrelationdialog.ui  gwmcsvtodatdialog.cpp  gwmcsvtodatdialog.h  gwmcsvtodatdialog.ui  gwmdevattrtable.cpp  gwmdevattrtable.h  gwmenumvaluenamemapper.h  gwmfeaturepanel.cpp  gwmfeaturepanel.h  gwmfeaturepanel.ui  gwmggwroptionsdialog.cpp  gwmggwroptionsdialog.h  gwmggwroptionsdialog.ui  gwmgtwroptionsdialog.cpp  (+74 more)
DelimitedText/: qgsdelimitedtextfeatureiterator.cpp  qgsdelimitedtextfeatureiterator.h  qgsdelimitedtextprovider.cpp  qgsdelimitedtextprovider.h
GWmodel/: GWmodel.cpp  GWmodel.h  gwmbinomialmodel.cpp  gwmbinomialmodel.h  gwmgeneralizedlinearmodel.cpp  gwmgeneralizedlinearmodel.h  gwmlinearmodel.cpp  gwmlinearmodel.h  gwmpoissonmodel.cpp  gwmpoissonmodel.h
Layout/: gwmlayoutbatchconfigurationdelegate.cpp  gwmlayoutbatchconfigurationmodel.cpp  gwmlayoutbatchconfigurationmodel.h  gwmlayoutbatchdialog.cpp  gwmlayoutbatchdialog.h  gwmlayoutbatchdialog.ui  gwmlayoutbatchfieldlistmodel.cpp  gwmlayoutbatchfieldlistmodel.h  gwmlayoutbatchlayerlistmodel.cpp  gwmlayoutbatchlayerlistmodel.h  gwmlayoutbatchunifylayerpopupdialog.cpp  gwmlayoutbatchunifylayerpopupdialog.h  gwmlayoutdesigner.cpp  gwmlayoutdesigner.h  gwmlayoutdesigner.ui  (+3 more)
src/: CMakeLists.txt  aboutdevelopers.h  aboutdevelopers.ui  aboutdevelopteam.h  aboutdevelopteam.ui  gwmapp.cpp  gwmapp.h  gwmapp.ui  gwmattributetabledialog.cpp  gwmattributetabledialog.h  gwmcoordtranssettingdialog.h  gwmcoordtranssettingdialog.ui  gwmcorrelationdialog.h  gwmdelimitedtextfile.cpp  gwmdelimitedtextfile.h  gwmenumvaluenamemapper.h  gwmggwroptionsdialog.h  gwmggwroptionsdialog.ui  gwmgtdroptionsdialog.cpp  gwmgtdroptionsdialog.h  gwmgtdroptionsdialog.ui  gwmgtwroptionsdialog.ui  gwmgwaverageoptionsdialog.cpp  gwmgwaverageoptionsdialog.h  gwmgwaverageoptionsdialog.ui  gwmgwcorrelationoptionsdialog.cpp  gwmgwcorrelationoptionsdialog.h  gwmgwcorrelationoptionsdialog.ui  gwmgwpcaoptionsdialog.h  gwmgwpcaoptionsdialog.ui  gwmgwroptionsdialog.ui  gwmgwssoptionsdialog.ui  gwmindepvarselectorwidget.h  gwmindepvarselectorwidget.ui  gwmlcrgwroptionsdialog.h  gwmlcrgwroptionsdialog.ui  gwmmultiscalegwroptionsdialog.cpp  gwmmultiscalegwroptionsdialog.h  gwmmultiscalegwroptionsdialog.ui  gwmopenxyeventlayerdialog.cpp  (+20 more)
src/AttributeTable/: CMakeLists.txt  qgsfeatureaction.cpp  qgsfeaturefilterwidget.cpp  qgsguivectorlayertools.cpp
src/DelimitedText/: CMakeLists.txt  qgsdelimitedtextfeatureiterator.h  qgsdelimitedtextfile.h
src/GWmodel/: CMakeLists.txt  gwmgeneralizedlinearmodel.h
src/Layout/: CMakeLists.txt  gwmlayoutbatchconfigurationdelegate.h  gwmlayoutbatchdialog.cpp  gwmlayoutbatchfieldlistmodel.h  gwmlayoutbatchlayerlistmodel.cpp  gwmlayoutbatchunifylayerpopupdialog.ui  gwmlayoutdesigner.cpp  gwmlayoutdesigner.ui  qgslayoutmanagerbase.ui  qgslayoutmanagerdialog.h
src/Model/: CMakeLists.txt  gwmalgorithmmetagtdr.cpp  gwmalgorithmmetagtdr.h  gwmalgorithmmetagwss.h  gwmalgorithmmetavariable.cpp  gwmalgorithmmetavariable.h  gwmlayerattributeitem.cpp  gwmlayerattributeitem.h  gwmlayerggwritem.cpp  gwmlayergroupitem.cpp  gwmlayergroupitem.h  gwmlayergtdritem.cpp  gwmlayergtdritem.h  gwmlayergtwritem.h  gwmlayergwaverageitem.cpp  gwmlayergwaverageitem.h  gwmlayergwcorrelationitem.cpp  gwmlayergwcorrelationitem.h  gwmlayergwpcaitem.cpp  gwmlayergwpcaitem.h  gwmlayergwssitem.cpp  gwmlayergwssitem.h  gwmlayeritem.cpp  gwmlayeritem.h  gwmlayeritemmodel.cpp  gwmlayermultiscalegwritem.h  gwmlayeroriginitem.cpp  gwmlayerscalablegwritem.cpp  gwmlayersymbolitem.h  gwmlayervectoritem.cpp  gwmpropertygwcorrelationsparameterspecifieditemmodel.cpp  gwmpropertygwcorrelationsparameterspecifieditemmodel.h  gwmvariableitemmodel.h  testmodel.cpp
src/PropertyPanelTabs/: CMakeLists.txt  gwmpropertycollinearitygwrtab.ui  gwmpropertydefaulttab.cpp  gwmpropertyggwrtab.h  gwmpropertyggwrtab.ui  gwmpropertygtdrtab.cpp  gwmpropertygtdrtab.h  gwmpropertygtdrtab.ui  gwmpropertygwaveragetab.cpp  gwmpropertygwaveragetab.h  gwmpropertygwaveragetab.ui  gwmpropertygwcorrelationstab.cpp  gwmpropertygwcorrelationstab.h  gwmpropertygwcorrelationstab.ui  gwmpropertygwcorrelationtab.cpp  gwmpropertygwcorrelationtab.h  gwmpropertygwcorrelationtab.ui  gwmpropertygwpcatab.cpp  gwmpropertygwpcatab.h  gwmpropertygwpcatab.ui  gwmpropertygwrtab.cpp  gwmpropertygwrtab.ui  gwmpropertygwsstab.cpp  gwmpropertygwsstab.h  gwmpropertymultiscalegwrtab.ui  gwmpropertyscalablegwrtab.h
src/SpatialWeight/: CMakeLists.txt  gwmbandwidthweight.h  gwmdistance.cpp  gwmdistance.h  gwmdmatdistance.cpp  gwmminkwoskidistance.cpp  gwmspatialtemporalweight.h
src/SymbolWindow/: CMakeLists.txt  gwmsymbolwindow.cpp
src/TaskThread/: CMakeLists.txt  gwmbandwidthsizeselector.cpp  gwmcoordtransthread.cpp  gwmcsvtodatthread.cpp  gwmgeneralizedgwralgorithm.h  gwmggwrbandwidthselectionthread.cpp  gwmgtdrtaskthread.cpp  gwmgtdrtaskthread.h  gwmgtwralgorithm.cpp  gwmgtwralgorithm.h  gwmgwaveragetaskthread.cpp  gwmgwaveragetaskthread.h  gwmgwcorrelationtaskthread.cpp  gwmgwcorrelationtaskthread.h  gwmgwpcataskthread.cpp  gwmgwpcataskthread.h  gwmgwsstaskthread.cpp  gwmgwsstaskthread.h  gwmindependentvariableselector.cpp  gwmlocalcollinearitygwralgorithm.cpp  gwmrobustgwralgorithm.cpp  gwmscalablegwralgorithm.h  gwmspatialmultiscalealgorithm.h  gwmspatialtemporalmonoscale.cpp  gwmtaskthread.cpp  gwmtaskthread.h  imonovariableanalysis.cpp  imultivariableanalysis.h  iregressionanalysis.h
src/Validity/: CMakeLists.txt
src/symbolwindow/: gwmsymboleditordialog.cpp  gwmsymboleditordialog.h
(+197 files in other folders)
