cmake_minimum_required(VERSION 3.12.0 FATAL_ERROR)
project(GWmodelS LANGUAGES CXX VERSION 1.1.0)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
# set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
# set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 COMPONENTS Core Gui Xml PrintSupport Svg Network REQUIRED)
qt5_add_resources(GWMODEL_ICONS images/images.qrc)

if(WIN32)
    set(QT_USEQTMAIN TRUE)
    set(app_WINRC app_win32.rc)
    set_property(SOURCE app_win32.rc APPEND PROPERTY OBJECT_DEPENDS ${PROJECT_SOURCE_DIR}/icons/GWmodelS.ico)
endif(WIN32)

if(UNIX AND NOT CYGWIN)
    if(APPLE)
        set(QT_USEQTMAIN TRUE)
        set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
        set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
        set(MACOSX_BUNDLE_GUI_IDENTIFIER ${IDENTIFIER})
        set(MACOSX_BUNDLE_BUNDLE_NAME GWmodelS)
        set(MACOSX_BUNDLE_COPYRIGHT ${COPYRIGHT})
        set(MACOSX_BUNDLE_SHORT_VERSION_STRING ${spectral_VERSION})
        set(MACOSX_BUNDLE_BUNDLE_VERSION ${spectral_VERSION})
        set(ICON_NAME "GWmodelS.icns")
        set(app_MACICON ${PROJECT_SOURCE_DIR}/icons/${ICON_NAME})
        set(MACOSX_BUNDLE_ICON_FILE ${ICON_NAME})
        set_source_files_properties(${app_MACICON} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
    endif(APPLE)    
endif(UNIX AND NOT CYGWIN)

if(CYGWIN)
    message(FATAL_ERROR "Not support Cygwin currently!")
endif(CYGWIN)

add_subdirectory(src)
